Update statuses. Add Est Hours. Change Id to int.
